<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_hero"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameResult"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/random_superhero_name"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"
            android:letterSpacing=".050"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/superHeroImg"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_drawable"
            android:contentDescription="@string/superheroimage"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heroIDtv"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:letterSpacing=".075"
                android:text="@string/super_hero_id"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/idResultTv"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/_777"
                android:textAlignment="textStart"
                android:letterSpacing=".075"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/infoBtn"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="#1B4332"
                android:letterSpacing=".075"
                android:text="@string/info"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/intelligenceTv"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:letterSpacing=".075"
                android:layout_weight="1"
                android:text="@string/intelligence"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/intResult"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/_111"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/strengthTv"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:letterSpacing=".075"
                android:text="@string/strength"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/strResult"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:text="@string/_222"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/durabilityTv"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:letterSpacing=".075"
                android:text="@string/durability"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/durResult"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/_333"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/powerTv"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:letterSpacing=".075"
                android:text="@string/power"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/pwrResult"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:text="@string/_444"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speedTv"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:letterSpacing=".075"
                android:text="@string/speed"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/spdResult"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/_555"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/combatTv"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:letterSpacing=".075"
                android:text="@string/combat"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/cbtResult"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:text="@string/_666"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>