<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeroOccupation">

    <TextView
        android:id="@+id/tvBase"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:letterSpacing=".075"
        android:text="@string/base_locations"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occResult" />

    <TextView
        android:id="@+id/tvOccupation"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:letterSpacing=".075"
        android:text="@string/occupation"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroIDtvOcc" />

    <TextView
        android:id="@+id/nameResultOcc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:letterSpacing=".075"
        android:text="@string/random_superhero_name"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idResultTvOcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_weight="1"
        android:letterSpacing=".050"
        android:text="@string/_777"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heroIDtvOcc"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:layout_weight="1"
        android:letterSpacing=".075"
        android:text="@string/super_hero_id"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/occResult"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:letterSpacing=".050"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOccupation" />

    <TextView
        android:id="@+id/locResults"
        android:layout_width="320dp"
        android:layout_height="125dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:letterSpacing=".050"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBase" />

</androidx.constraintlayout.widget.ConstraintLayout>